# FIGHT-LINES-DEPR-

./: .gitignore  Cargo.toml  README.md
.github/workflows/: fmt.yml  rust.yml
code-gen/: Cargo.toml
code-gen/src/: lib.rs  main.rs  store.rs
code-gen/src/protos/: game_request.proto  game_request.rs
dev-css/: Cargo.toml
dev-css/src/: main.rs
moves/: Cargo.toml
moves/src/: lib.rs  moves.rs
server/: Cargo.toml  Rocket.toml  build.rs
server-actix/: Cargo.toml
server/src/: lib.rs  main.rs  route.rs
server/src/domain/: game.rs  mod.rs  model.rs  player.rs
server/src/protos/: logic.rs
server/static/: index.html  poc.html
shared/: Cargo.toml  README.md
shared/src/: game_request.rs  lib.rs
shared/src/api/: mod.rs  start_game.rs
ui/: Cargo.toml  index.html  style.css
ui/assets/: style.css
ui/src/: lib.rs  main.rs  program.rs  requests.rs  route.rs  session.rs
ui/src/page/: demo.rs  game.css  game.rs  lobby.rs  mod.rs  start_game.rs  title.rs
ui/src/static/: index.html
ui/src/util/: http.rs
ui/src/view/: button.css  button.rs  element.rs  image.rs  main.css  mod.rs  row.css  sprite.css  sprite.rs  text.rs  text_field.rs
ui/src/view/grid/: cell.css  cell.rs  mod.rs  row.rs
ui/src/view/sprite/: grass_tile.rs  light_tank.rs  mod.rs
ui/src/view/style/: gen.css  gen_const.rs  mod.rs
