[package]
name = "server"
version = "0.1.0"
authors = ["Chadtech <chadtech0@gmail.com>", "VictorXLR <Jelly@VictorXLR.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
env_logger = "0.7.1"
rand = "0.3"
actix-files = "0.2.1"
serde = "1.0"
shared = { path = "../shared" }
actix-cors = "0.2.0"
hex = "0.4.2"